# ESP-cam

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  sdkconfig.defaults
.cursor/: mcp.json
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  camera_manager.c  camera_manager.h  camera_pins.h  idf_component.yml  main.c  photo_uploader.c  photo_uploader.h  time_sync.c  time_sync.h  wifi_manager.c  wifi_manager.h
server/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  run.sh  tunnel.sh
server/app/: __init__.py  config.py  database.py  dependencies.py  main.py
server/app/api/: captures.py  history.py  stats.py  uploads.py
server/app/models/: __init__.py  tables.py
server/app/repositories/: capture_repo.py
server/app/schemas/: __init__.py  capture.py  stats.py
server/app/services/: capture_service.py  cleanup_service.py  detection_service.py  migration_service.py  stats_service.py
server/app/static/: app.js  index.html  styles.css
server/app/utils/: timestamps.py
server/detector/: Dockerfile  app.py  pyproject.toml  requirements.txt
